--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,8 @@ repos:
   hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
+  - id: check-toml
+  - id: check-yaml
   - id: check-merge-conflict
   - id: check-added-large-files
 
