--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,8 +31,8 @@ jobs:
         with:
           base_sha: ${{ env.main_sha }}
           files: |
-            '**/*.py'
-            'pyproject.toml'
+            **/*.py
+            pyproject.toml
 
     outputs:
       any_changed: ${{ steps.changed-py-files.outputs.any_changed }}
